--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,10 @@
       <script src="{{ "/assets/tipuesearch/tipuesearch.min.js" | relative_url }}"></script>
     {% endif %}
     
-    <script src="https://cloud.upfing.de/photo/photo_new/syno_photo_external.js"></script>
   </head>
   <body>
     <section class="page-header">
-      <a href="{{ site.github.url }}" <h1 class="project-name">upfing.de</h1> </a>
+      <a href="{{ site.github.url }}" <h1 class="project-name">PSD TechBlog</h1> </a>
       <a href="{{ site.github.url }}/search" class="nav-icon"> <img src="{{ site.github.url }}/images/search.png" height="30"> </a>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
     </section>
@@ -28,7 +27,7 @@
     <!-- Navigation -->
     <nav id="navigation" class="clearfix">
     <a href="{{ site.github.url }}" class="menu-links">Home</a> <br>
-    <a href="{{ site.github.url }}/about" class="menu-links">Über upfing.de</a> <br>
+    <a href="{{ site.github.url }}/blog" class="menu-links">Tech Blog</a> <br>
     <a href="{{ site.github.url }}/private-zone" class="menu-links">Private Zone</a>
     </nav> 
     
@@ -37,10 +36,8 @@
       
       <footer class="site-footer">
         <span class="site-footer-credits"> 
-          <a href="{{ site.github.url }}" class="site-footer-links">(c) 2018-2019 upfing.de</a> 
+          <a href="{{ site.github.url }}" class="site-footer-links">(c) 2019 ProSiebenSat.1 Digital GmbH</a> 
           <a href="{{ site.github.url }}/impressum" class="site-footer-links">Impressum</a> 
-          <a href="{{ site.github.url }}/datenschutz" class="site-footer-links">Datenschutz</a> 
-          <a href="{{ site.github.url }}/nutzungsbedingungen" class="site-footer-links">Nutzungsbedingungen</a> 
         </span>
       </footer>
     </section>
