--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <section class="page-header">
+      <a href="{{ site.github.url }}" class="nav-icon"> <img src="{{ site.github.url }}/images/psd.gif" height="50"> </a>
       <a href="{{ site.github.url }}" <h1 class="project-name">PSD TechBlog</h1> </a>
       <a href="{{ site.github.url }}/search" class="nav-icon"> <img src="{{ site.github.url }}/images/search.png" height="30"> </a>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
