--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -268,7 +268,8 @@ a:hover { text-decoration: underline; }
 @media screen and (max-width: 42em) { .btn { display: block; width: 100%; padding: 0.75rem; font-size: 0.9rem; }
   .btn + .btn { margin-top: 1rem; margin-left: 0; } }
 
-.page-header { color: #fff; text-align: center; background-image: url("{{ site.github.url }}/images/header.jpg"); background-size: cover; }
+// .page-header { color: #fff; text-align: center; background-image: url("{{ site.github.url }}/images/header.jpg"); background-size: cover; }
+.page-header { color: #fff; text-align: center; }
 .page-header a { color:#fff; }
 
 @media screen and (min-width: 64em) { .page-header { padding: 0.5rem 6rem; } }
