--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -270,7 +270,9 @@ a:hover { text-decoration: underline; }
 
 // .page-header { color: #fff; text-align: center; background-image: url("{{ site.github.url }}/images/header.jpg"); background-size: cover; }
 .page-header { color: #fff; text-align: center; }
-.page-header a { color:#fff; }
+.page-header a { color:#f03; }
+
+.nav-icon { margin-left: 2 rem; margin-right: 2rem; }}
 
 @media screen and (min-width: 64em) { .page-header { padding: 0.5rem 6rem; } }
 @media screen and (min-width: 42em) and (max-width: 64em) { .page-header { padding: 0.4rem 4rem; } }
