--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,9 @@
     <!-- Navigation -->
     <nav id="navigation" class="clearfix">
     <a href="{{ site.github.url }}" class="menu-links">Home</a> <br>
-    <a href="{{ site.github.url }}/blog" class="menu-links">Tech Blog</a> <br>
-    <a href="{{ site.github.url }}/private-zone" class="menu-links">Private Zone</a>
+    <a href="{{ site.github.url }}/engineering_guidelines" class="menu-links">Engineering Guidelines</a> <br>
+    <a href="{{ site.github.url }}/blog" class="menu-links">Blog</a> <br>
+    <a href="{{ site.github.url }}/opensource" class="menu-links">Open source</a>
     </nav> 
     
     <section class="main-content">
