--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,12 @@
    
     <!-- Navigation -->
     <nav id="navigation" class="clearfix">
-    <a href="{{ site.github.url }}" class="menu-links">Home</a> <br>
-    <a href="{{ site.github.url }}/engineering_guidelines" class="menu-links">Engineering Guidelines</a> <br>
-    <a href="{{ site.github.url }}/blog" class="menu-links">Blog</a> <br>
-    <a href="{{ site.github.url }}/opensource" class="menu-links">Open source</a>
+    <ul>
+        <li> <a href="{{ site.github.url }}" class="menu-links">Home</a> <br> </li>
+        <li> <a href="{{ site.github.url }}/engineering_guidelines" class="menu-links">Engineering Guidelines</a> <br> </li>
+        <li> <a href="{{ site.github.url }}/blog" class="menu-links">Blog</a> <br> </li>
+        <li> <a href="{{ site.github.url }}/opensource" class="menu-links">Open source</a> </li>
+    </ul>
     </nav> 
     
     <section class="main-content">
