--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
    
     <!-- Navigation -->
     <nav id="navigation" class="clearfix">
-    <ul>
-        <li> <a href="{{ site.github.url }}" class="menu-links">Home</a> <br> </li>
-        <li> <a href="{{ site.github.url }}/engineering_guidelines" class="menu-links">Engineering Guidelines</a> <br> </li>
-        <li> <a href="{{ site.github.url }}/blog" class="menu-links">Blog</a> <br> </li>
-        <li> <a href="{{ site.github.url }}/opensource" class="menu-links">Open source</a> </li>
+    <ul class="menu-links">
+        <li> <a href="{{ site.github.url }}">Home</a> <br> </li>
+        <li> <a href="{{ site.github.url }}/engineering_guidelines">Engineering Guidelines</a> <br> </li>
+        <li> <a href="{{ site.github.url }}/blog">Blog</a> <br> </li>
+        <li> <a href="{{ site.github.url }}/opensource">Open source</a> </li>
     </ul>
     </nav> 
     
