--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de-de">
+<html lang="en-us">
   <head>
     <meta charset="UTF-8">
     <title>{{ page.title | default: site.title }}</title>
