--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,15 +27,7 @@
       {% include breadcrumb.html %}
     </section>
    
-    <!-- Navigation -->
-    <nav id="navigation" class="clearfix">
-    <ul class="menu-links">
-        <li> <a href="{{ site.github.url }}">Home</a> <br> </li>
-        <li> <a href="{{ site.github.url }}/engineering_guidelines/overview">Engineering Guidelines</a> <br> </li>
-        <li> <a href="{{ site.github.url }}/blog">Blog</a> <br> </li>
-        <li> <a href="{{ site.github.url }}/opensource">Open source</a> </li>
-    </ul>
-    </nav> 
+    {% include navigation.html %}
     
     <section class="main-content">
       {{ content }}
