--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -272,16 +272,16 @@ a:hover { text-decoration: underline; }
 .page-header { color: #fff; text-align: center; }
 .page-header a { color:#f03; }
 
-.nav-icon { margin-left: 2 rem; margin-right: 2rem; }
+.nav-icon { }
 
 @media screen and (min-width: 64em) { .page-header { padding: 0.5rem 6rem; } }
 @media screen and (min-width: 42em) and (max-width: 64em) { .page-header { padding: 0.4rem 4rem; } }
 @media screen and (max-width: 42em) { .page-header { padding: 0.3rem 1rem; } }
 
 .project-name { margin-top: 0; margin-bottom: 0.1rem; font-family: "Comic Sans MS", cursive, sans-serif; }
-@media screen and (min-width: 64em) { .project-name { font-size: 2.5rem; } }
-@media screen and (min-width: 42em) and (max-width: 64em) { .project-name { font-size: 2rem; } }
-@media screen and (max-width: 42em) { .project-name { font-size: 1.75rem; } }
+@media screen and (min-width: 64em) { .project-name { font-size: 2.25rem; margin-left: 2rem; } }
+@media screen and (min-width: 42em) and (max-width: 64em) { .project-name { font-size: 2rem; margin-left: 1.5rem; } }
+@media screen and (max-width: 42em) { .project-name { font-size: 1.75rem; margin-left: 1rem; } }
 
 .project-tagline { margin-bottom: 0.5rem; font-weight: normal; opacity: 0.8; }
 @media screen and (min-width: 64em) { .project-tagline { font-size: 1rem; } }
@@ -344,3 +344,12 @@ a:hover { text-decoration: underline; }
 @media screen and (min-width: 42em) and (max-width: 64em) { .clearfix { margin-left: 0rem; width: 9rem; padding: 0.5rem 0.5rem; font-size: 0.85rem; float: left; } }
 @media screen and (max-width: 42em) { .clearfix { margin-left: 0rem; width: 100%; padding: 1rem 1rem; font-size: 0.8rem; float: inherit } }
 
+.breadcrumb { padding-top: 0.5rem; list-style:none; border-radius:4px }
+.breadcrumb>li { display:inline-block }
+.breadcrumb>li+li:before { padding:0 5px }
+.breadcrumb { border:0px; display:block }
+.breadcrumb li { font-size:1rem }
+.breadcrumb a { color:#DE0000 }
+.breadcrumb a:hover { color:#780000 }
+.breadcrumb>.active a { color:#555555 }
+.breadcrumb>li+li:before { color:#DE0000; content:"\003E\00a0" }
