--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -278,7 +278,7 @@ a:hover { text-decoration: underline; }
 @media screen and (min-width: 42em) and (max-width: 64em) { .page-header { padding: 0.4rem 4rem; } }
 @media screen and (max-width: 42em) { .page-header { padding: 0.3rem 1rem; } }
 
-.project-name { margin-top: 0; margin-bottom: 0.1rem; font-family: "Comic Sans MS", cursive, sans-serif; }
+.project-name { margin-top: 0; margin-bottom: 0.1rem; font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 @media screen and (min-width: 64em) { .project-name { font-size: 2.25rem; margin-left: 2rem; } }
 @media screen and (min-width: 42em) and (max-width: 64em) { .project-name { font-size: 2rem; margin-left: 1.5rem; } }
 @media screen and (max-width: 42em) { .project-name { font-size: 1.75rem; margin-left: 1rem; } }
