--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,5 @@
    <nav id="navigation" class="clearfix">
+    Navigation:     
     <ul class="menu-links">       
       {% for page in site.pages %}
         {% if page.nav-title %}
