--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,7 +2,7 @@
     <ul class="menu-links">       
       {% for page in site.pages %}
         {% if page.nav-title %}
-          <li> <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a> </li>
+          <li> <a href="{{ page.url | prepend: site.baseurl }}">{{ page.nav-title }}</a> </li>
         {% endif %}
       {% endfor %}
     </ul>
