--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -272,11 +272,13 @@ a:hover { text-decoration: underline; }
 .page-header { color: #fff; text-align: center; }
 .page-header a { color:#f03; }
 
-.nav-icon { }
-
 @media screen and (min-width: 64em) { .page-header { padding: 0.5rem 6rem; } }
 @media screen and (min-width: 42em) and (max-width: 64em) { .page-header { padding: 0.4rem 4rem; } }
 @media screen and (max-width: 42em) { .page-header { padding: 0.3rem 1rem; } }
+
+@media screen and (min-width: 64em) { .page-header img { height: 40px; } }
+@media screen and (min-width: 42em) and (max-width: 64em) { .page-header img { height: 30px; } }
+@media screen and (max-width: 42em) { .page-header img { height: 20px; } }
 
 .project-name { margin-top: 0; margin-bottom: 0.1rem; font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 @media screen and (min-width: 64em) { .project-name { font-size: 2.25rem; margin-left: 2rem; } }
