--- a/_layouts/radar.html
+++ b/_layouts/radar.html
@@ -17,7 +17,7 @@
     {% endif %}
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="{{ " assets/radar.js" | relative_url }}"></script>
+    <script src="{{ "/assets/radar.js" | relative_url }}"></script>
   </head>
 
   <body>
