--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     {% include head.html %} 
   </head>
   <body>
-    {% include pageheader..html %} 
+    {% include pageheader.html %} 
     {% include navigation.html %}
     
     <section class="main-content">
