--- a/_layouts/radar.html
+++ b/_layouts/radar.html
@@ -6,7 +6,7 @@
     <script src="{{ "/assets/radar.js" | relative_url }}"></script>
   </head>
   <body>
-    {% include pageheader..html %}
+    {% include pageheader.html %}
     {% include navigation.html %}
 
     <section class="main-content">
