--- a/_layouts/radar.html
+++ b/_layouts/radar.html
@@ -4,6 +4,7 @@
     {% include head.html %}
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="{{ "/assets/radar.js" | relative_url }}"></script>
+    <link rel="stylesheet" href="{{ "/assets/radar.css" | relative_url }}>
   </head>
   <body>
     {% include pageheader.html %}
