--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -358,3 +358,5 @@ a:hover { text-decoration: underline; }
 .breadcrumb a:hover { color:#780000 }
 .breadcrumb>.active a { color:#555555 }
 .breadcrumb>li+li:before { color:#DE0000; content:"\003E\00a0" }
+
+.radar { font-size: 0.8rem; }
