--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -360,3 +360,7 @@ a:hover { text-decoration: underline; }
 .breadcrumb>li+li:before { color:#DE0000; content:"\003E\00a0" }
 
 .radar { font-size: 0.8rem; }
+.radar .title { font-size: 2rem; }
+.radar .footer { font-size: 0.7rem; }
+.radar .quadrant { font-size: 1rem; }
+.radar .ring { font-size: 1.5rem; }
