--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -363,4 +363,5 @@ a:hover { text-decoration: underline; }
 .radar .title { font-size: 2rem; }
 .radar .footer { font-size: 0.7rem; }
 .radar .quadrant { font-size: 1.2rem; }
-.radar .ring { font-size: 0.9rem; }
+.radar .quadrant-ring { font-size: 0.9rem; }
+.radar .ring { font-size: 4rem; }
