--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -269,7 +269,7 @@ a:hover { text-decoration: underline; }
   .btn + .btn { margin-top: 1rem; margin-left: 0; } }
 
 // .page-header { color: #fff; text-align: center; background-image: url("{{ site.github.url }}/images/header.jpg"); background-size: cover; }
-.page-header { color: #fff; text-align: center; background-color: antiquewhite; }
+.page-header { color: #fff; text-align: center; background-color: aliceblue; }
 .page-header a { color:#f03; }
 
 @media screen and (min-width: 64em) { .page-header { padding: 0.5rem 6rem; } }
