--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -280,7 +280,7 @@ a:hover { text-decoration: underline; }
 @media screen and (min-width: 42em) and (max-width: 64em) { .page-header img { height: 38px; } }
 @media screen and (max-width: 42em) { .page-header img { height: 30px; } }
 
-.project-name { margin-top: 0; margin-bottom: 0.1rem; font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; font-weight: bold; }
+.project-name { margin-top: 0; margin-bottom: 0.1rem; font-family: Georgia, Times, "Times New Roman", serif; }
 @media screen and (min-width: 64em) { .project-name { font-size: 2.25rem; margin-left: 2rem; } }
 @media screen and (min-width: 42em) and (max-width: 64em) { .project-name { font-size: 2rem; margin-left: 1.5rem; } }
 @media screen and (max-width: 42em) { .project-name { font-size: 1.75rem; margin-left: 1rem; } }
