--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -366,3 +366,9 @@ a:hover { text-decoration: underline; }
 .radar .quadrant-ring { font-size: 0.8rem; }
 .radar .ring { font-size: 2.4rem; }
 .radar .blib-text { font-size: 0.6rem; }
+
+.posts .title { font-size: 1.2rem; }
+.posts .date { font-style: italic;  }
+.posts .author { font-size: 1rem; }
+.posts .image { width: 50px; }
+.posts .excerpt { font-size: 0.8rem; }
