--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -367,8 +367,9 @@ a:hover { text-decoration: underline; }
 .radar .ring { font-size: 2.4rem; }
 .radar .blib-text { font-size: 0.6rem; }
 
-.posts .title { font-size: 1.2rem; }
-.posts .date { font-style: italic;  }
-.posts .author { font-size: 1rem; }
-.posts .image { width: 50px; }
-.posts .excerpt { font-size: 0.8rem; }
+.post {}
+.post .title { font-size: 1.2rem; }
+.post .date { font-style: italic;  }
+.post .author { font-size: 1rem; }
+.post .image { width: 50px; }
+.post .excerpt { font-size: 0.8rem; }
