--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -371,5 +371,5 @@ a:hover { text-decoration: underline; }
 .post .title { font-size: 1.2rem; margin: 0rem; }
 .post .date { font-size: 0.8rem; font-style: italic; margin: 0rem; }
 .post .author { font-size: 0.8rem; font-style: italic; font-weight:bold; margin: 0rem; }
-.post .image { width: 90px; margin-right: 1rem; float: left}
+.post .image { height: 90px; margin-right: 1rem; float: left}
 .post .excerpt { font-size: 0.8rem; margin: 1rem;}
