--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -367,9 +367,9 @@ a:hover { text-decoration: underline; }
 .radar .ring { font-size: 2.4rem; }
 .radar .blib-text { font-size: 0.6rem; }
 
-.post {}
+.post { margin: 0rem 0rem 1rem 0rem; padding: 1rem;  border: 1px solid lightblue; }
 .post .title { font-size: 1.2rem; margin: 0rem; }
 .post .date { font-size: 0.8rem; font-style: italic; margin: 0rem; }
 .post .author { font-size: 0.8rem; font-style: italic; font-weight:bold; margin: 0rem; }
-.post .image { height: 90px; margin-right: 1rem; float: left}
-.post .excerpt { font-size: 0.8rem; margin: 1rem;}
+.post .image { height: 90px; margin: 0rem 1rem 1rem 0rem; float: left}
+.post .excerpt { font-size: 0.8rem; margin: 0rem 1rem 0rem 0rem;}
