--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,15 +8,18 @@
     {% include navigation.html %}
     
     <section class="main-content">
-      <h1> {{ page.title }} </h1>
-      By {{ page.author }}
+      <section class="post-header">
+        <p class="title"> {{ page.title }} </p>
+        <p class="date"> Date: {{ page.date | date: '%d.%m.%Y' }} </p>
+        <p class="author"> Author: {{ page.author }} </p>
       
-      {% if page.image %}
-        <img class="post-image" src="{{ site.baseurl }}/images/posts/{{ page.image }}"/>
-      {% else %}
-        <img class="post-image" src="{{ site.baseurl }}/images/blog.jpg"/>
-      {% endif %}  
-
+        {% if page.image %}
+          <img class="image" src="{{ site.baseurl }}/images/posts/{{ page.image }}"/>
+        {% else %}
+          <img class="image" src="{{ site.baseurl }}/images/blog.jpg"/>
+        {% endif %}  
+      </section> 
+      
       {{ content }}
       
       {% include footer.html %}
