--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -367,9 +367,15 @@ a:hover { text-decoration: underline; }
 .radar .ring { font-size: 2.4rem; }
 .radar .blib-text { font-size: 0.6rem; }
 
-.post { margin: 0rem 0rem 1rem 0rem; padding: 1rem; border: 1px solid lightblue; min-height: 125px; }
-.post .title { font-size: 1.1rem; margin: 0rem; }
-.post .date { font-style: italic; margin: 0rem; }
-.post .author { font-style: italic; font-weight:bold; margin: 0rem; }
-.post .image { height: 90px; margin: 0rem 1rem 1rem 0rem; float: left}
-.post .excerpt { margin: 0rem 1rem 0rem 0rem;}
+.post-teaser { margin: 0rem 0rem 1rem 0rem; padding: 1rem; border: 1px solid lightblue; min-height: 125px; }
+.post-teaser .title { font-size: 1.1rem; margin: 0rem; }
+.post-teaser .date { font-style: italic; margin: 0rem; }
+.post-teaser .author { font-style: italic; font-weight:bold; margin: 0rem; }
+.post-teaser .image { height: 90px; margin: 0rem 1rem 1rem 0rem; float: left}
+.post-teaser .excerpt { margin: 0rem 1rem 0rem 0rem;}
+
+.post-header { margin: 0rem; padding: 1rem; border: 1px solid lightblue; min-height: 125px; }
+.post-header .title { font-size: 1.2rem; margin: 0rem; }
+.post-header .date { font-style: italic; margin: 0rem; }
+.post-header .author { font-style: italic; font-weight:bold; margin: 0rem; }
+.post-header .image { height: 120px; margin: 0rem; }
