--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -307,11 +307,13 @@ a:hover { text-decoration: underline; }
 .post-teaser .title { font-size: 1.1rem; margin: 0rem; }
 .post-teaser .date { font-style: italic; margin: 0rem; }
 .post-teaser .author { font-style: italic; font-weight:bold; margin: 0rem; }
-.post-teaser .image { height: 90px; margin: 0rem 1rem 1rem 0rem; float: left}
+.post-teaser .image { height: 90px; margin: 0rem 1rem 1rem 0rem; float: left; }
 .post-teaser .excerpt { margin: 0rem 1rem 0rem 0rem;}
 
 .post-header { margin: 0rem; padding: 1rem; border: 1px solid lightblue; min-height: 125px; }
 .post-header .title { font-size: 1.2rem; margin: 0rem; }
 .post-header .date { font-style: italic; margin: 0rem; }
 .post-header .author { font-style: italic; font-weight:bold; margin: 0rem; }
-.post-header .image { height: 120px; margin: 0rem; }
+.post-header .image { height: 120px; margin: 0rem; float: left;}
+.post-header .excerpt { margin: 0rem 1rem 0rem 0rem;}
+
