--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -310,7 +310,7 @@ a:hover { text-decoration: underline; }
 .post-teaser .image { height: 90px; margin: 0rem 1rem 1rem 0rem; float: left; }
 .post-teaser .excerpt { margin: 0rem 1rem 0rem 0rem;}
 
-.post-header { margin: 0rem; padding: 1rem; border: 1px solid lightblue; min-height: 125px; }
+.post-header { margin: 0rem 0rem 1rem 0rem; padding: 1rem; border: 1px solid lightblue; min-height: 155px; }
 .post-header .title { font-size: 1.2rem; margin: 0rem; }
 .post-header .date { font-style: italic; margin: 0rem; }
 .post-header .author { font-style: italic; font-weight:bold; margin: 0rem; }
