--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -314,6 +314,6 @@ a:hover { text-decoration: underline; }
 .post-header .title { font-size: 1.2rem; margin: 0rem; }
 .post-header .date { font-style: italic; margin: 0rem; }
 .post-header .author { font-style: italic; font-weight:bold; margin: 0rem; }
-.post-header .image { height: 120px; margin: 0rem; float: left;}
+.post-header .image { height: 120px; margin: 0rem 1rem 1rem 0rem; float: left;}
 .post-header .excerpt { margin: 0rem 1rem 0rem 0rem;}
 
