--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,7 @@
         <p class="title"> {{ page.title }} </p>
         <p class="date"> Date: {{ page.date | date: '%d.%m.%Y' }} </p>
         <p class="author"> Author: {{ page.author }} </p>   
+        <p class="excerpt"> {{ page.summary }} </p>   
       </section> 
       
       {{ content }}
