--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -303,14 +303,14 @@ a:hover { text-decoration: underline; }
 .radar .ring { font-size: 2.4rem; }
 .radar .blib-text { font-size: 0.6rem; }
 
-.post-teaser { margin: 0rem 0rem 1rem 0rem; padding: 1rem; border: 1px solid #0055af; box-shadow: 2px 5px #e7f3ff; min-height: 125px; }
+.post-teaser { margin: 0rem 0rem 1rem 0rem; padding: 1rem; border: 1px solid #87CEFA; box-shadow: 2px 5px #e7f3ff; min-height: 125px; }
 .post-teaser .title { font-size: 1.1rem; margin: 0rem; }
 .post-teaser .date { font-style: italic; margin: 0rem; }
 .post-teaser .author { font-style: italic; font-weight:bold; margin: 0rem; }
 .post-teaser .image { height: 90px; margin: 0rem 1rem 1rem 0rem; float: left; }
 .post-teaser .excerpt { margin: 0.2rem 1rem 0rem 0rem;}
 
-.post-header { margin: 0rem 0rem 1rem 0rem; padding: 1rem; border: 1px solid #0055af; box-shadow: 2px 5px #e7f3ff; min-height: 155px; }
+.post-header { margin: 0rem 0rem 1rem 0rem; padding: 1rem; border: 1px solid #87CEFA; box-shadow: 2px 5px #e7f3ff; min-height: 155px; }
 .post-header .title { font-size: 1.2rem; margin: 0.2rem 0rem .2rem 0rem; }
 .post-header .date { font-style: italic; margin: 0rem; }
 .post-header .author { font-style: italic; font-weight:bold; margin: 0rem; }
