--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -296,9 +296,8 @@ a:hover { text-decoration: underline; }
 .breadcrumb>li+li:before { color: #DE0000; content: "\003E\00a0" }
 
 .radar { font-size: 0.7rem; }
-.radar .title { font-size: 1.8rem; }
 .radar .footer { font-size: 0.7rem; }
-.radar .quadrant { font-size: 1.3rem; }
+.radar .quadrant { font-size: 1.3rem; color: #0055af; }
 .radar .quadrant-ring { font-size: 0.8rem; }
 .radar .ring { font-size: 2.0rem; }
 .radar .blib-text { font-size: 0.6rem; }
