--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -297,8 +297,8 @@ a:hover { text-decoration: underline; }
 
 .radar { font-size: 0.7rem; }
 .radar .footer { font-size: 0.7rem; }
-.radar .quadrant { font-size: 1.3rem; color: #0055af; }
-.radar .quadrant-ring { font-size: 0.8rem; }
+.radar .quadrant { font-size: 1.3rem; }
+.radar .legend { font-size: 0.75rem; }
 .radar .ring { font-size: 2.0rem; }
 .radar .blib-text { font-size: 0.6rem; }
 
